compiler/testData/multiplatform/incompatibleProperties/output.txt
-- Common --
Exit code: OK
Output:

-- JVM --
Exit code: COMPILATION_ERROR
Output:
compiler/testData/multiplatform/incompatibleProperties/common.kt:1:1: error: declaration 'pval'
The following declaration is incompatible because property kinds are different (val vs var):
    public var pval: String
 has no definition in platform module
platform val pval: String
^
compiler/testData/multiplatform/incompatibleProperties/common.kt:2:1: error: declaration 'pvar'
The following declaration is incompatible because property kinds are different (val vs var):
    public val pvar: String
 has no definition in platform module
platform var pvar: String
^
compiler/testData/multiplatform/incompatibleProperties/jvm.kt:1:1: error: modifier 'impl' is only applicable to members that are initially declared in platform-independent code
impl var pval: String = ""
^
compiler/testData/multiplatform/incompatibleProperties/jvm.kt:2:1: error: modifier 'impl' is only applicable to members that are initially declared in platform-independent code
impl val pvar: String = ""
^

